1.5.0.9/class.HelperHelpAccessCore.md
Class HelperHelpAccessCore
=====================





* Class name: HelperHelpAccessCore
* Parent class: [Helper](class.HelperCore.md)
* Source: [classes/helper/HelperHelpAccess.php line 31](https://github.com/PrestaShop/PrestaShop/blob/1.5.0.9/classes/helper/HelperHelpAccess.php#L31)


Contents
--------


### Properties

* [$country](#property-$country)
* [$iso_lang](#property-$iso_lang)
* [$label](#property-$label)
* [$ps_version](#property-$ps_version)
* [$base_folder](#property-$base_folder)
* [$base_tpl](#property-$base_tpl)
* [$context](#property-$context)
* [$currentIndex](#property-$currentIndex)
* [$identifier](#property-$identifier)
* [$module](#property-$module)
* [$override_folder](#property-$override_folder)
* [$ps_help_context](#property-$ps_help_context)
* [$show_toolbar](#property-$show_toolbar)
* [$table](#property-$table)
* [$title](#property-$title)
* [$token](#property-$token)
* [$toolbar_btn](#property-$toolbar_btn)
* [$toolbar_scroll](#property-$toolbar_scroll)
* [$tpl](#property-$tpl)
* [$tpl_vars](#property-$tpl_vars)

### Methods

* [__construct](#method-__construct)
* [createTemplate](#method-createTemplate)
* [generate](#method-generate)
* [l](#method-l)
* [renderAdminCategorieTree](#method-renderAdminCategorieTree)
* [renderCategoryTree](#method-renderCategoryTree)
* [renderRequiredFields](#method-renderRequiredFields)
* [renderShopList](#method-renderShopList)
* [setTpl](#method-setTpl)




Properties
----------


### <a name="property-$country"></a>$country

```php
public mixed $country
```





* Visibility: **public**
* Source: [classes/helper/HelperHelpAccess.php line 35](https://github.com/PrestaShop/PrestaShop/blob/1.5.0.9/classes/helper/HelperHelpAccess.php#L35).


### <a name="property-$iso_lang"></a>$iso_lang

```php
public mixed $iso_lang
```





* Visibility: **public**
* Source: [classes/helper/HelperHelpAccess.php line 34](https://github.com/PrestaShop/PrestaShop/blob/1.5.0.9/classes/helper/HelperHelpAccess.php#L34).


### <a name="property-$label"></a>$label

```php
public mixed $label
```





* Visibility: **public**
* Source: [classes/helper/HelperHelpAccess.php line 33](https://github.com/PrestaShop/PrestaShop/blob/1.5.0.9/classes/helper/HelperHelpAccess.php#L33).


### <a name="property-$ps_version"></a>$ps_version

```php
public mixed $ps_version
```





* Visibility: **public**
* Source: [classes/helper/HelperHelpAccess.php line 36](https://github.com/PrestaShop/PrestaShop/blob/1.5.0.9/classes/helper/HelperHelpAccess.php#L36).


### <a name="property-$base_folder"></a>$base_folder

```php
public string $base_folder
```





* Visibility: **public**
* This property is defined by [HelperCore](class.HelperCore.md).
* Source: [classes/helper/Helper.php line 52](https://github.com/PrestaShop/PrestaShop/blob/1.5.0.9/classes/helper/Helper.php#L52).


### <a name="property-$base_tpl"></a>$base_tpl

```php
public string $base_tpl = 'content.tpl'
```





* Visibility: **public**
* This property is defined by [HelperCore](class.HelperCore.md).
* Source: [classes/helper/Helper.php line 65](https://github.com/PrestaShop/PrestaShop/blob/1.5.0.9/classes/helper/Helper.php#L65).


### <a name="property-$context"></a>$context

```php
public mixed $context
```





* Visibility: **public**
* This property is defined by [HelperCore](class.HelperCore.md).
* Source: [classes/helper/Helper.php line 43](https://github.com/PrestaShop/PrestaShop/blob/1.5.0.9/classes/helper/Helper.php#L43).


### <a name="property-$currentIndex"></a>$currentIndex

```php
public mixed $currentIndex
```





* Visibility: **public**
* This property is defined by [HelperCore](class.HelperCore.md).
* Source: [classes/helper/Helper.php line 35](https://github.com/PrestaShop/PrestaShop/blob/1.5.0.9/classes/helper/Helper.php#L35).


### <a name="property-$identifier"></a>$identifier

```php
public mixed $identifier
```





* Visibility: **public**
* This property is defined by [HelperCore](class.HelperCore.md).
* Source: [classes/helper/Helper.php line 37](https://github.com/PrestaShop/PrestaShop/blob/1.5.0.9/classes/helper/Helper.php#L37).


### <a name="property-$module"></a>$module

```php
public \Module $module
```





* Visibility: **public**
* This property is defined by [HelperCore](class.HelperCore.md).
* Source: [classes/helper/Helper.php line 49](https://github.com/PrestaShop/PrestaShop/blob/1.5.0.9/classes/helper/Helper.php#L49).


### <a name="property-$override_folder"></a>$override_folder

```php
public string $override_folder
```





* Visibility: **public**
* This property is defined by [HelperCore](class.HelperCore.md).
* Source: [classes/helper/Helper.php line 55](https://github.com/PrestaShop/PrestaShop/blob/1.5.0.9/classes/helper/Helper.php#L55).


### <a name="property-$ps_help_context"></a>$ps_help_context

```php
public mixed $ps_help_context
```





* Visibility: **public**
* This property is defined by [HelperCore](class.HelperCore.md).
* Source: [classes/helper/Helper.php line 40](https://github.com/PrestaShop/PrestaShop/blob/1.5.0.9/classes/helper/Helper.php#L40).


### <a name="property-$show_toolbar"></a>$show_toolbar

```php
public mixed $show_toolbar = true
```





* Visibility: **public**
* This property is defined by [HelperCore](class.HelperCore.md).
* Source: [classes/helper/Helper.php line 42](https://github.com/PrestaShop/PrestaShop/blob/1.5.0.9/classes/helper/Helper.php#L42).


### <a name="property-$table"></a>$table

```php
public mixed $table
```





* Visibility: **public**
* This property is defined by [HelperCore](class.HelperCore.md).
* Source: [classes/helper/Helper.php line 36](https://github.com/PrestaShop/PrestaShop/blob/1.5.0.9/classes/helper/Helper.php#L36).


### <a name="property-$title"></a>$title

```php
public mixed $title
```





* Visibility: **public**
* This property is defined by [HelperCore](class.HelperCore.md).
* Source: [classes/helper/Helper.php line 41](https://github.com/PrestaShop/PrestaShop/blob/1.5.0.9/classes/helper/Helper.php#L41).


### <a name="property-$token"></a>$token

```php
public mixed $token
```





* Visibility: **public**
* This property is defined by [HelperCore](class.HelperCore.md).
* Source: [classes/helper/Helper.php line 38](https://github.com/PrestaShop/PrestaShop/blob/1.5.0.9/classes/helper/Helper.php#L38).


### <a name="property-$toolbar_btn"></a>$toolbar_btn

```php
public mixed $toolbar_btn
```





* Visibility: **public**
* This property is defined by [HelperCore](class.HelperCore.md).
* Source: [classes/helper/Helper.php line 39](https://github.com/PrestaShop/PrestaShop/blob/1.5.0.9/classes/helper/Helper.php#L39).


### <a name="property-$toolbar_scroll"></a>$toolbar_scroll

```php
public mixed $toolbar_scroll = false
```





* Visibility: **public**
* This property is defined by [HelperCore](class.HelperCore.md).
* Source: [classes/helper/Helper.php line 44](https://github.com/PrestaShop/PrestaShop/blob/1.5.0.9/classes/helper/Helper.php#L44).


### <a name="property-$tpl"></a>$tpl

```php
protected \smartyTemplate $tpl
```





* Visibility: **protected**
* This property is defined by [HelperCore](class.HelperCore.md).
* Source: [classes/helper/Helper.php line 60](https://github.com/PrestaShop/PrestaShop/blob/1.5.0.9/classes/helper/Helper.php#L60).


### <a name="property-$tpl_vars"></a>$tpl_vars

```php
public mixed $tpl_vars = array()
```





* Visibility: **public**
* This property is defined by [HelperCore](class.HelperCore.md).
* Source: [classes/helper/Helper.php line 67](https://github.com/PrestaShop/PrestaShop/blob/1.5.0.9/classes/helper/Helper.php#L67).


Methods
-------


### <a name="method-__construct"></a>__construct

```php
mixed HelperHelpAccessCore::__construct($label, $iso_lang, $country, $ps_version)
```





* Visibility: **public**
* Source: [classes/helper/HelperHelpAccess.php line 38](https://github.com/PrestaShop/PrestaShop/blob/1.5.0.9/classes/helper/HelperHelpAccess.php#L38)


#### Arguments
* $label **mixed**
* $iso_lang **mixed**
* $country **mixed**
* $ps_version **mixed**



### <a name="method-createTemplate"></a>createTemplate

```php
\Template HelperCore::createTemplate(string $tpl_name)
```

Create a template from the override file, else from the base file.



* Visibility: **public**
* This method is defined by [HelperCore](class.HelperCore.md).
* Source: [classes/helper/Helper.php line 85](https://github.com/PrestaShop/PrestaShop/blob/1.5.0.9/classes/helper/Helper.php#L85)


#### Arguments
* $tpl_name **string** - filename



### <a name="method-generate"></a>generate

```php
string|void HelperHelpAccessCore::generate()
```





* Visibility: **public**
* Source: [classes/helper/HelperHelpAccess.php line 53](https://github.com/PrestaShop/PrestaShop/blob/1.5.0.9/classes/helper/HelperHelpAccess.php#L53)




### <a name="method-l"></a>l

```php
string HelperCore::l(mixed $string, string $class, \boolan $addslashes, boolean $htmlentities)
```

use translations files to replace english expression.



* Visibility: **protected**
* This method is defined by [HelperCore](class.HelperCore.md).
* Source: [classes/helper/Helper.php line 307](https://github.com/PrestaShop/PrestaShop/blob/1.5.0.9/classes/helper/Helper.php#L307)


#### Arguments
* $string **mixed** - term or expression in english
* $class **string**
* $addslashes **boolan** - if set to true, the return value will pass through addslashes(). Otherwise, stripslashes().
* $htmlentities **boolean** - if set to true(default), the return value will pass through htmlentities($string, ENT_QUOTES, &#039;utf-8&#039;)



### <a name="method-renderAdminCategorieTree"></a>renderAdminCategorieTree

```php
mixed HelperCore::renderAdminCategorieTree($translations, $selected_cat, $input_name, $use_radio, $use_search, $disabled_categories, $use_in_popup)
```





* Visibility: **public**
* This method is **static**.
* This method is defined by [HelperCore](class.HelperCore.md).
* Source: [classes/helper/Helper.php line 119](https://github.com/PrestaShop/PrestaShop/blob/1.5.0.9/classes/helper/Helper.php#L119)


#### Arguments
* $translations **mixed**
* $selected_cat **mixed**
* $input_name **mixed**
* $use_radio **mixed**
* $use_search **mixed**
* $disabled_categories **mixed**
* $use_in_popup **mixed**



### <a name="method-renderCategoryTree"></a>renderCategoryTree

```php
string HelperCore::renderCategoryTree(array $root, \type $selected_cat, string $input_name, boolean $use_radio, boolean $use_search, array $disabled_categories, boolean $use_in_popup, boolean $use_shop_context)
```





* Visibility: **public**
* This method is defined by [HelperCore](class.HelperCore.md).
* Source: [classes/helper/Helper.php line 167](https://github.com/PrestaShop/PrestaShop/blob/1.5.0.9/classes/helper/Helper.php#L167)


#### Arguments
* $root **array** - array with the name and ID of the tree root category, if null the Shop&#039;s root category will be used
* $selected_cat **type** - array of selected categories
            Format
                Array
                (
                     [0] =&gt; 1
                 [1] =&gt; 2
            )
                OR
            Array
            (
                 [1] =&gt; Array
                      (
                            [id_category] =&gt; 1
                            [name] =&gt; Home page
                      )
            )
* $input_name **string** - name of input
* $use_radio **boolean** - use radio tree or checkbox tree
* $use_search **boolean** - display a find category search box
* $disabled_categories **array**
* $use_in_popup **boolean**
* $use_shop_context **boolean**



### <a name="method-renderRequiredFields"></a>renderRequiredFields

```php
string HelperCore::renderRequiredFields(string $class_name, string $identifier, array $table_fields)
```

Render a form with potentials required fields



* Visibility: **public**
* This method is defined by [HelperCore](class.HelperCore.md).
* Source: [classes/helper/Helper.php line 325](https://github.com/PrestaShop/PrestaShop/blob/1.5.0.9/classes/helper/Helper.php#L325)


#### Arguments
* $class_name **string**
* $identifier **string**
* $table_fields **array**



### <a name="method-renderShopList"></a>renderShopList

```php
mixed HelperCore::renderShopList()
```





* Visibility: **public**
* This method is **static**.
* This method is defined by [HelperCore](class.HelperCore.md).
* Source: [classes/helper/Helper.php line 354](https://github.com/PrestaShop/PrestaShop/blob/1.5.0.9/classes/helper/Helper.php#L354)




### <a name="method-setTpl"></a>setTpl

```php
mixed HelperCore::setTpl($tpl)
```





* Visibility: **public**
* This method is defined by [HelperCore](class.HelperCore.md).
* Source: [classes/helper/Helper.php line 74](https://github.com/PrestaShop/PrestaShop/blob/1.5.0.9/classes/helper/Helper.php#L74)


#### Arguments
* $tpl **mixed**


